--- a/planesmith/app/src/main/AndroidManifest.xml
+++ b/planesmith/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Characters"></activity>
+        <activity android:name=".Story"></activity>
+        <activity android:name=".World"></activity>
     </application>
 
 </manifest>
