fixed manifest a little

--- a/planesmith/app/src/main/AndroidManifest.xml
+++ b/planesmith/app/src/main/AndroidManifest.xml
@@ -22,5 +22,7 @@
         <activity android:name=".Story"></activity>
         <activity android:name=".World"></activity>
     </application>
-
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18"/>
 </manifest>
