--- a/planesmith/app/build.gradle
+++ b/planesmith/app/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 dependencies {
+    def sqlite_version = "2.1.0"
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -41,4 +42,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "com.google.android.material:material:$version"
+    implementation "androidx.sqlite:sqlite:$sqlite_version"
+
 }
