--- a/planesmith/app/src/main/AndroidManifest.xml
+++ b/planesmith/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="umn.ac.id.planesmith">
 
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Planesmith">
+        <activity
+            android:name=".Character_Add"
+            android:exported="false" />
+        <activity
+            android:name=".World_Add"
+            android:exported="false" />
+        <activity
+            android:name=".Story_Add"
+            android:exported="false" />
+        <activity
+            android:name=".StoryAdd"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -18,11 +34,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Characters"></activity>
-        <activity android:name=".Story"></activity>
-        <activity android:name=".World"></activity>
+        <activity android:name=".Characters" />
+        <activity android:name=".Story" />
+        <activity android:name=".World" />
     </application>
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18"/>
+
 </manifest>
