--- a/planesmith/app/build.gradle
+++ b/planesmith/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -28,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-database:20.0.2'
     def sqlite_version = "2.1.0"
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
