--- a/planesmith/app/src/main/AndroidManifest.xml
+++ b/planesmith/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".Characters" />
         <activity android:name=".Story" />
         <activity android:name=".World" />
+        <activity android:name=".Register"/>
     </application>
 
 </manifest>
