--- a/planesmith/app/build.gradle
+++ b/planesmith/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "com.google.android.material:material:$version"
+    implementation "androidx.cardview:cardview:1.0.0"
 }
