--- a/planesmith/app/build.gradle
+++ b/planesmith/app/build.gradle
@@ -30,17 +30,19 @@ android {
 dependencies {
     def sqlite_version = "2.1.0"
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-runtime:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    def lifecycle_version = "2.2.0"
+    implementation "androidx.recyclerview.recyclerview:1.1.0"
+    def lifecycle_version = "2.4.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "com.google.android.material:material:$version"
     implementation "androidx.cardview:cardview:1.0.0"
+
 }
