--- a/planesmith/app/src/main/AndroidManifest.xml
+++ b/planesmith/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Planesmith">
         <activity
+            android:name=".CharacterActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditWorld"
             android:exported="false" />
         <activity
@@ -32,9 +35,6 @@
             android:exported="false" />
         <activity
             android:name=".StoryActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Characters"
             android:exported="false" />
         <activity
             android:name=".WorldActivity"
