--- a/planesmith/app/src/main/AndroidManifest.xml
+++ b/planesmith/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Planesmith">
+        android:theme="@style/Theme.Light">
         <activity
             android:name=".CharacterActivity"
             android:exported="false" />
